Better GIF caching